--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,20 +1,6 @@
 @import "reset";
 @import "variables";
 
-// section {
-//   margin-block: clamp(2rem, 5vw, 4rem);
-
-//   @media (max-width: $mobile-break) {
-//     margin-block: 2rem;
-//   }
-// }
-
-// body {
-//   max-width: 900px;
-//   width: 85%;
-//   margin: 0 auto;
-// }
-
 .background_main {
   padding: clamp(2rem, 5vw, 4rem);
 
@@ -22,13 +8,13 @@
     padding: 2rem;
   }
 
-  max-width: none;
   margin-inline: auto;
   background-image: url("/src/images/background_top.webp"),
     url("/src/images/background_botton.webp");
   background-repeat: no-repeat, no-repeat;
   background-position: top left, bottom right;
   background-size: clamp(100px, 20vw, 200px), clamp(100px, 20vw, 200px);
+  background-color: #f5f7f0;
 }
 
 #main {
@@ -59,6 +45,7 @@
       justify-content: center;
       gap: 1rem;
       max-width: 500px;
+
       h1 {
         line-height: 1em;
         text-align: center;
@@ -68,22 +55,89 @@
         gap: 2rem;
       }
     }
-
+    .sub_btn {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
     .terapeuta {
       display: flex;
       flex-direction: column;
       align-items: center;
       font-weight: 700;
+
       img {
         width: clamp(150px, 20vw, 200px);
       }
+
       ul {
         display: flex;
         gap: 5px;
         justify-content: center;
+
         img {
           width: 20px;
         }
+      }
+    }
+  }
+
+  @media (max-width: $mobile-break) {
+    // .banner {
+    //   order: 1;
+    // }
+  }
+}
+
+// Starts section 2
+
+#about {
+  padding: clamp(1rem, 5vw, 4rem);
+  margin-left: 1rem;
+  margin-right: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5rem;
+  flex-wrap: wrap;
+
+  .especilização {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  ul {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  li {
+    display: flex;
+    gap: 10px;
+  }
+  img {
+    width: 26px;
+  }
+
+  .saber-mais {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    text-align: center;
+    max-width: 39rem;
+
+    ul {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      gap: 2rem;
+      justify-content: center;
+      .btn {
+        background-color: transparent;
+        border: 3px solid $color-primary;
+        color: $color-text;
       }
     }
   }
