--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,13 +1,11 @@
 @import "reset";
 @import "variables";
 
+section {
+  padding: 4rem clamp(2rem, 6vw, 5rem) 4rem;
+}
+
 .background_main {
-  padding: clamp(2rem, 5vw, 4rem);
-
-  @media (max-width: $mobile-break) {
-    padding: 2rem;
-  }
-
   margin-inline: auto;
   background-image: url("/src/images/background_top.webp"),
     url("/src/images/background_botton.webp");
@@ -24,15 +22,19 @@
   gap: 1rem;
 
   .banner {
-    padding-top: 2rem;
+    // padding-top: 2rem;
+    margin-bottom: 2rem;
     img {
-      width: clamp(200px, 30vw, 300px);
+      width: clamp(250px, 30vw, 300px);
       height: auto;
+    }
+    @media (max-width: $mobile-break) {
+      margin-bottom: 0;
     }
   }
 
   .content {
-    padding: 2rem clamp(1rem, 4vw, 5rem);
+    padding: 2rem clamp(1rem, 4vw, 5rem) 0rem;
     display: grid;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
@@ -42,10 +44,11 @@
 
     h1 {
       max-width: clamp(40rem, 10vw + 1rem, 45rem);
-      line-height: 1em;
+
       text-align: center;
       grid-area: h1;
       align-self: center;
+      margin-bottom: 2rem;
     }
     .proposta {
       display: grid;
@@ -53,6 +56,12 @@
       align-self: start;
       justify-items: center;
       gap: 1rem;
+
+      h2 {
+        font-size: clamp(1rem, 2vw, 1.2rem);
+        margin-bottom: 1rem;
+        max-width: 65ch; // keeps long text readable
+      }
     }
     .terapeuta {
       grid-area: terapeuta;
@@ -69,6 +78,7 @@
 
       h1 {
         max-width: clamp(22rem, 10vw + 1rem, 45rem);
+        margin-bottom: 0;
       }
     }
   }
@@ -98,9 +108,6 @@
 // Starts section 2
 
 #about {
-  padding: 3rem clamp(1rem, 4vw, 5rem);
-  margin-left: 1rem;
-  margin-right: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -112,6 +119,11 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 2rem;
+  }
+
+  h2 {
+    max-width: 18rem;
+    text-align: left;
   }
 
   ul {
@@ -133,15 +145,10 @@
     flex-direction: column;
     gap: 1rem;
     text-align: center;
-    max-width: 39rem;
+    max-width: 35rem;
 
     .saiba-mais {
       font-weight: 700;
-    }
-
-    .btn {
-      max-width: 10rem;
-      padding: 0.5rem 1.3rem;
     }
 
     ul {
@@ -151,22 +158,178 @@
       gap: 1rem;
       justify-content: center;
       align-items: baseline;
-      .btn {
-        background-color: transparent;
-        border: 3px solid $color-primary;
-        color: $color-text;
-      }
     }
   }
 
-  @media (max-width: 1060px) {
+  @media (max-width: $mobile-break) {
+    gap: 2rem;
+    h2 {
+      text-align: center;
+    }
     .btn-mobile {
       display: none;
     }
-    gap: 2rem;
-
     .especilização {
       align-items: center;
+    }
+  }
+}
+
+// Starts Section 3
+.background_testimony {
+  background-image: $color-background;
+}
+
+#testimony {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
+  grid-template-areas:
+    "title testimony"
+    "abrath testimony";
+  max-width: 1020px;
+  margin: 0 auto;
+
+  column-gap: 5rem;
+  justify-items: center;
+
+  .testimony_title {
+    grid-area: title;
+    max-width: clamp(30rem, 10vw + 1rem, 45rem);
+    margin-bottom: 2rem;
+  }
+
+  .testimony_abrath {
+    grid-area: abrath;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    justify-content: center;
+
+    ul {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      img {
+        width: 150px;
+      }
+    }
+    img {
+      width: clamp(150px, 20vw, 200px);
+    }
+  }
+
+  .testimony_testimony {
+    grid-area: testimony;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+    img {
+      width: clamp(250px, 30vw, 400px);
+    }
+  }
+
+  @media (max-width: $mobile-break) {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto;
+    grid-template-areas:
+      "title"
+      "testimony"
+      "abrath";
+    .btn_border {
+      margin-bottom: 2rem;
+    }
+
+    .testimony_testimony {
+      img {
+        width: clamp(400px, 40vw, 500px);
+      }
+    }
+
+    .testimony_abrath {
+      img {
+        width: clamp(200px, 40vw, 500px);
+      }
+    }
+  }
+}
+
+// Starts section 4
+
+#price {
+  display: flex;
+  flex-direction: column;
+  line-height: 1.3rem;
+
+  h2 {
+    margin-bottom: 4rem;
+  }
+
+  .prices {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 5rem;
+    flex-wrap: wrap;
+
+    .individual,
+    .pacote {
+      background-image: $color-background;
+      border: 3px solid $color-secondary;
+      border-radius: 10px;
+      padding: 2rem;
+      max-width: 350px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+
+      h3 {
+        margin-bottom: 2rem;
+        text-align: center;
+      }
+
+      .btn {
+        padding: 0.6rem 1.2rem;
+        border: none;
+      }
+
+      ul {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+
+        li {
+          display: flex;
+          align-items: center;
+          gap: 1rem;
+
+          img {
+            width: 30px;
+          }
+        }
+      }
+
+      .price_container {
+        display: flex;
+        flex-direction: column;
+        margin: 2rem;
+        gap: 0.8rem;
+        align-items: center;
+        text-align: center;
+
+        .price {
+          font-weight: 700;
+          font-size: 2rem;
+        }
+      }
+
+      .obs {
+        font-size: 0.8rem;
+        margin-bottom: -1.39rem;
+      }
     }
   }
 }
