--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -11,6 +11,10 @@ $font: "Signika", sans-serif;
 //mobile @//
 $mobile-break: 768px;
 
+section {
+  padding: 4rem clamp(2rem, 6vw, 5rem) 4rem;
+}
+
 //-------- Font --------/
 body {
   font-family: $font;
@@ -40,10 +44,50 @@ p {
   max-width: 50ch; // keeps long text readable
 }
 
+//-------- Links --------//
+
+p {
+  a {
+    display: inline-block;
+    line-height: 1.1;
+    border-bottom: 2px solid transparent;
+    color: $color-primary;
+    font-weight: 700;
+    transition: transform 0.3s ease, border-color 0.3s ease;
+
+    &:hover,
+    &:focus {
+      transform: scale(1.05);
+      border-color: $color-primary;
+    }
+
+    &:active {
+      transform: scale(0.97);
+      border-bottom: none;
+    }
+  }
+}
+
+//for icons
+.img_link {
+  display: inline-block;
+  transition: transform 0.3s ease;
+
+  &:hover,
+  &:focus {
+    transform: scale(1.1);
+  }
+
+  &:active {
+    transform: scale(0.97);
+  }
+}
+
 //-------- btn --------//
 
 .btn {
   display: inline-block;
+  box-shadow: none;
   padding: 0.75rem 2rem;
   font-weight: 700;
   font-size: clamp(1rem, 2vw, 1.1rem);
@@ -55,17 +99,20 @@ p {
   text-decoration: none;
   line-height: 1.3rem;
   font-family: $font;
-  transition: background-color 0.3s ease, transform 0.2s ease;
+  transition: background-color 0.3s ease, transform 0.3s ease,
+    box-shadow 0.3s ease;
 
   &:hover,
   &:focus {
     background-color: $color-secondary;
     transform: scale(1.03);
     cursor: pointer;
+    box-shadow: 0px 0px 0px 5px rgba(0, 0, 0, 0.1);
   }
 
   &:active {
     transform: scale(0.97);
+    box-shadow: none;
   }
 }
 
@@ -81,3 +128,74 @@ p {
 }
 
 //-------- footer --------//
+footer {
+  background-image: linear-gradient(to bottom, $color-primary, white);
+
+  section {
+    padding: 2rem;
+  }
+
+  .main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    .contact {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      align-items: center;
+      justify-content: center;
+      width: 300px;
+
+      ul {
+        display: flex;
+        gap: 0.3rem;
+        justify-content: center;
+
+        img {
+          width: 20px;
+        }
+      }
+    }
+
+    .logo {
+      width: 300px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img {
+        width: clamp(80px, 5vw, 200px);
+        height: auto;
+      }
+    }
+
+    .aviso_legal {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      // max-width: 400px;
+      width: 300px;
+      text-align: center;
+
+      p {
+        font-size: 0.8rem;
+      }
+    }
+
+    @media (max-width: $mobile-break) {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
+  .rights_reserved {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 2rem;
+
+    .obs {
+      font-size: 0.7rem;
+    }
+  }
+}
