--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -11,6 +11,10 @@ $font: "Signika", sans-serif;
 //mobile @//
 $mobile-break: 768px;
 
+html {
+  scroll-behavior: smooth;
+}
+
 section {
   padding: 4rem clamp(2rem, 6vw, 5rem) 4rem;
 }
@@ -198,4 +202,10 @@ footer {
       font-size: 0.7rem;
     }
   }
+}
+
+//-------- Window resize animation --------//
+.container > * {
+  /* allow transforms */
+  transition: transform 0.3s ease;
 }
