--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,6 +4,7 @@ $color-secondary: #319e4e;
 $color-text: #033b3b;
 $color-background: linear-gradient(to bottom, #c3dcc877, #f5ead229);
 $color-white: #ffffff;
+$color-nav: #65cdcd;
 
 //fonts//
 $font: "Signika", sans-serif;
