--- a/src/index.njk
+++ b/src/index.njk
@@ -1,3 +1,7 @@
+---
+layout: false
+---
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -166,12 +170,16 @@
         <ul>
           <li>
             <a
-              href="/blog/passo-a-passo-de-como-aplicar-a-tecnica-de-liberacao-emocional-eft/index.html"
+              href="/blog/passo-a-passo-de-como-aplicar-a-tecnica-de-liberacao-emocional-eft"
               class="btn btn_border"
               >EFT</a
             >
           </li>
-          <li><a href="" class="btn btn_border">Processo Terapêutico</a></li>
+          <li>
+            <a href="/blog/processo-terapeutico" class="btn btn_border"
+              >Processo Terapêutico</a
+            >
+          </li>
           <li><a href="" class="btn btn_border">TRG</a></li>
         </ul>
       </div>
@@ -394,91 +402,6 @@
         </div>
       </div>
     </section>
-
-    <footer>
-      <div class="background_divider">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 1440 200"
-          preserveAspectRatio="none"
-          style="display: block; width: 100%; height: auto"
-        >
-          <path
-            d="M0,200 
-           C360,0 1080,0 1440,200 
-           L1440,0 L0,0 Z"
-            fill="#fff"
-          />
-        </svg>
-      </div>
-      <div class="background">
-        <div class="main">
-          <section class="contact">
-            <p>Siga-nos nas redes sociais:</p>
-            <ul>
-              <li>
-                <a
-                  class="img_link"
-                  href="https://www.tiktok.com/@eftclub"
-                  target="_blank"
-                  ><img src="/images/tiktok-icon.svg" alt=""
-                /></a>
-              </li>
-              <li>
-                <a
-                  class="img_link"
-                  href="https://www.youtube.com/@eftclub/"
-                  target="_blank"
-                  ><img src="/images/youtube-icon.svg" alt=""
-                /></a>
-              </li>
-              <li>
-                <a
-                  class="img_link"
-                  href="https://www.instagram.com/eftclub_terapias/"
-                  target="_blank"
-                  ><img src="/images/instagram-icon.svg" alt=""
-                /></a>
-              </li>
-              <li>
-                <a
-                  class="img_link"
-                  href="https://www.facebook.com/profile.php?id=100080437803652"
-                  target="_blank"
-                  ><img src="/images/facebook-icon.svg" alt=""
-                /></a>
-              </li>
-            </ul>
-            <p>
-              <a href="mailto:atendimento@eftclub.com"
-                >atendimento@eftclub.com</a
-              >
-            </p>
-          </section>
-
-          <section class="logo">
-            <img
-              loading="lazy"
-              width="512"
-              height="auto"
-              src="/images/logo-eftclub.webp"
-              alt=""
-            />
-          </section>
-
-          <section class="aviso_legal">
-            <p>
-              Aviso Legal: As Terapias Holísticas e Integrativas são
-              complementares à medicina alopática, e não devem substituir
-              nenhuma consulta e/ou tratamento médico.
-            </p>
-          </section>
-        </div>
-
-        <div class="rights_reserved">
-          <p class="obs">© All Rights Reserved (<span id="year">2025</span>)</p>
-        </div>
-      </div>
-    </footer>
+    {% include "footer.njk" %}
   </body>
 </html>
