--- a/src/blog/index.njk
+++ b/src/blog/index.njk
@@ -1,14 +1,9 @@
----
-title: Artigos Recentes
-layout: false
----
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ title }}</title>
+    <title>Artigos</title>
     <link rel="stylesheet" href="/css/style-blogs.css" />
   </head>
   <body>
