--- a/src/css/style-blogs.css
+++ b/src/css/style-blogs.css
@@ -73,13 +73,13 @@ body {
 h1 {
   font-size: clamp(1.5rem, 5vw, 2.5rem);
   font-weight: 700;
-  line-height: 1em;
+  line-height: 1.3em;
 }
 
 h2 {
-  font-size: clamp(1.5rem, 5vw, 2rem);
+  font-size: clamp(1rem, 4vw, 1.5rem);
   font-weight: 700;
-  line-height: 1em;
+  line-height: 1.3em;
   text-align: center;
 }
 
@@ -275,4 +275,58 @@ footer .rights_reserved .obs {
 .flip-container > * {
   /* allow transforms */
   transition: transform 0.3s ease;
+}
+
+.containner {
+  margin: 5%;
+  display: flex;
+  justify-content: center;
+}
+@media (max-width: 768px) {
+  .containner {
+    flex-wrap: wrap;
+  }
+}
+.containner .post {
+  max-width: 720px;
+}
+.containner .side-bar {
+  max-width: 400px;
+  min-width: 300px;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding-right: 0;
+}
+.containner .side-bar .ajuda {
+  background-image: linear-gradient(to bottom, rgba(195, 220, 200, 0.4666666667), rgba(245, 234, 210, 0.1607843137));
+  border: 3px solid #033b3b;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  gap: 3rem;
+}
+.containner .side-bar .artigos {
+  border: 3px solid #033b3b;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem 1rem 2rem;
+  gap: 2rem;
+}
+.containner .side-bar .artigos ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.containner .side-bar .artigos ul li {
+  border-left: 3px solid #08aeaf;
+  padding-left: 0.5rem;
+}
+.containner .side-bar .artigos ul li p {
+  font-size: 0.8rem;
+  line-height: 1rem;
 }
