--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,7 +7,7 @@ $color-white: #ffffff;
 $color-nav: #65cdcd;
 
 //fonts//
-$font: "Signika", sans-serif;
+$font: 'Signika', sans-serif;
 
 //mobile @//
 $mobile-break: 768px;
@@ -29,13 +29,13 @@ body {
 h1 {
   font-size: clamp(1.5rem, 5vw, 2.5rem); // ~29px to 40px
   font-weight: 700;
-  line-height: 1em;
+  line-height: 1.3em;
 }
 
 h2 {
-  font-size: clamp(1.5rem, 5vw, 2rem); // ~29px to 40px
+  font-size: clamp(1rem, 4vw, 1.5rem); // ~29px to 40px
   font-weight: 700;
-  line-height: 1em;
+  line-height: 1.3em;
   text-align: center;
 }
 
@@ -58,7 +58,9 @@ p {
     border-bottom: 2px solid transparent;
     color: $color-primary;
     font-weight: 700;
-    transition: transform 0.3s ease, border-color 0.3s ease;
+    transition:
+      transform 0.3s ease,
+      border-color 0.3s ease;
 
     &:hover,
     &:focus {
@@ -104,7 +106,9 @@ p {
   text-decoration: none;
   line-height: 1.3rem;
   font-family: $font;
-  transition: background-color 0.3s ease, transform 0.3s ease,
+  transition:
+    background-color 0.3s ease,
+    transform 0.3s ease,
     box-shadow 0.3s ease;
 
   &:hover,
@@ -146,7 +150,7 @@ p {
     border-radius: 100px;
     display: grid;
     grid-template-columns: auto 1fr auto;
-    grid-template-areas: "logo lema blogs";
+    grid-template-areas: 'logo lema blogs';
     align-items: center;
     gap: 1rem;
     font-weight: 700;
